Update:   - Change Welcome text to dynamic rendering

--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -18,7 +18,7 @@
                             <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
                         </div>
                         <div class="welcome_text">
-                            <p>Free shipping on all domestic orders with coupon code <span>“Watches2018”</span></p>
+                            <p>{{ welcome_text|safe }}</p>
                         </div>
 
                         <div class="top_right text-right">
