--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -297,20 +297,11 @@
                                 <nav>
                                     <ul>
 
-                                        <li class="active"><a href="index.html">Home <i
-                                                class="fa fa-angle-down"></i></a>
-                                            <ul class="sub_menu">
-                                                <li><a href="index.html">Home 1</a></li>
-                                                <li><a href="index-2.html">Home 2</a></li>
-                                                <li><a href="index-3.html">Home 3</a></li>
-                                                <li><a href="index-4.html">Home 4</a></li>
-                                                <li><a href="index-5.html">Home 5</a></li>
-                                                <li><a href="index-6.html">Home 6</a></li>
-                                                <li><a href="index-7.html">Home 7</a></li>
-                                                <li><a href="index-8.html">Home 8</a></li>
-                                                <li><a href="index-9.html">Home 9</a></li>
-                                                <li><a href="index-10.html">Home 10</a></li>
-                                            </ul>
+                                        <li {% if active_page == "index" %}class="active"{% endif %}><a
+                                                href="{% url 'client:index' %}">Home | 首页</a>
+                                        </li>
+                                        <li {% if active_page == "shop" %}class="active"{% endif %}><a
+                                                href="{% url 'client:shop' %}">shop | 商品</a>
                                         </li>
                                         <li><a href="shop.html">shop <i class="fa fa-angle-down"></i></a>
                                             <ul class="mega_menu">
