--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -23,12 +23,12 @@
 
                         <div class="top_right text-right">
                             <ul>
-                                <li class="language"><a href="#"> English <i class="ion-chevron-down"></i></a>
-                                    <ul class="dropdown_language">
+                                <li class="language"><a href="#"> 简体中文 {# <i class="ion-chevron-down"></i> #}</a>
+                                    {% comment %}<ul class="dropdown_language">
                                         <li><a href="#"> French</a></li>
                                         <li><a href="#">Germany</a></li>
                                         <li><a href="#">Japanese</a></li>
-                                    </ul>
+                                    </ul>{% endcomment %}
                                 </li>
                                 <li class="top_links"><a href="#">{% trans '我的账户' %} <i
                                         class="ion-chevron-down"></i></a>
@@ -168,12 +168,12 @@
                     <div class="col-lg-5 col-md-12">
                         <div class="top_right text-right">
                             <ul>
-                                <li class="language"><a href="#"> English <i class="ion-chevron-down"></i></a>
-                                    <ul class="dropdown_language">
+                                <li class="language"><a href="#"> 简体中文 {# <i class="ion-chevron-down"></i> #}</a>
+                                    {% comment %}<ul class="dropdown_language">
                                         <li><a href="#"> French</a></li>
                                         <li><a href="#">Germany</a></li>
                                         <li><a href="#">Japanese</a></li>
-                                    </ul>
+                                    </ul>{% endcomment %}
                                 </li>
                                 <li class="top_links"><a href="#">{% trans '我的账户' %} <i
                                         class="ion-chevron-down"></i></a>
