--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -362,6 +362,21 @@
                                                 <li><a href="coming-soon.html">coming soon</a></li>
                                             </ul>
                                         </li>
+                                        <li {% if active_page == "user" %}class="active"{% endif %}><a href="#">Profile
+                                            | 用户 <i class="fa fa-angle-down"></i></a>
+                                            <ul class="sub_menu pages">
+                                                <li><a href="about.html">About Us</a></li>
+                                                <li><a href="services.html">services</a></li>
+                                                <li><a href="faq.html">Frequently Questions</a></li>
+                                                <li><a href="contact.html">contact</a></li>
+                                                <li><a href="login.html">login</a></li>
+                                                <li><a href="wishlist.html">Wishlist</a></li>
+                                                <li><a href="404.html">Error 404</a></li>
+                                                <li><a href="compare.html">compare</a></li>
+                                                <li><a href="privacy-policy.html">privacy policy</a></li>
+                                                <li><a href="coming-soon.html">coming soon</a></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </nav>
                             </div>
