Update:   - Add wishlist entrance

--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -438,7 +438,7 @@
                                 <ul>
                                     <li><a href="my-account.html">My Account</a></li>
                                     <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="wishlist.html">Wishlist</a></li>
+                                    <li><a href="{% url 'client:wishlist' %}">Wishlist</a></li>
                                     <li><a href="portfolio.html">Portfolio</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="faq.html">Frequently Questions</a></li>
