--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -14,12 +14,15 @@
 
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="{% static 'client/css/plugins.css' %}">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="{% static 'client/css/style.css' %}">
 
     <!--modernizr min js here-->
     <script src="{% static 'client/js/vendor/modernizr-3.7.1.min.js' %}"></script>
+    <script src="https://kit.fontawesome.com/286f5a36ee.js" crossorigin="anonymous"></script>
 </head>
 <body>
 {% block body %}
@@ -28,9 +31,14 @@
 {% block js %}
 {% endblock %}
 <!-- Plugins JS -->
-<script src="{% static 'client/js/vendor/jquery-3.4.1.min.js' %}"></script>
-<script src="{% static 'client/js/popper.js' %}"></script>
-<script src="{% static 'client/js/bootstrap.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
 <script src="{% static 'client/js/plugins.js' %}"></script>
 <script src="{% static 'client/js/owl.carousel.main.js' %}"></script>
 <script src="{% static 'client/js/jquery.nice.select.js' %}"></script>
