--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="{% static 'client/css/style.css' %}">
 
@@ -28,8 +29,6 @@
 {% block body %}
 {% endblock %}
 
-{% block js %}
-{% endblock %}
 <!-- Plugins JS -->
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -39,6 +38,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
 <script src="{% static 'client/js/plugins.js' %}"></script>
 <script src="{% static 'client/js/owl.carousel.main.js' %}"></script>
 <script src="{% static 'client/js/jquery.nice.select.js' %}"></script>
@@ -53,5 +53,66 @@
 
 <!-- Main JS -->
 <script src="{% static 'client/js/main.js' %}"></script>
+<script>
+    const notyf = new Notyf({
+        duration: 2000,
+        types: [
+            {
+                type: 'warning',
+                background: 'orange',
+                icon: {
+                    className: 'material-icons',
+                    tagName: 'i',
+                    text: 'warning'
+                }
+            }
+        ]
+    });
+    $(document).on('click', 'a.add_wishlist, button.add_wishlist', function (e) {
+        e.preventDefault();
+        let $this = $(this);
+        let variant_id = $this.data('variant');
+
+        $.ajax({
+            url: "{% url 'kern:wishlist' %}",
+            type: 'POST',
+            data: {
+                id: variant_id,
+            },
+            headers: {
+                'X-CSRFToken': '{{ csrf_token }}'
+            },
+            success: function (data) {
+                notyf.success(data["msg"]);
+            }
+        });
+    });
+    $(document).on('click', 'a.remove_wishlist, button.remove_wishlist', function (e) {
+        e.preventDefault();
+        let $this = $(this);
+        let variant_id = $this.data('variant');
+
+        $.ajax({
+            url: "{% url 'kern:wishlist' %}?id=" + variant_id,
+            type: 'DELETE',
+            data: {
+                id: variant_id,
+            },
+            headers: {
+                'X-CSRFToken': '{{ csrf_token }}'
+            },
+            success: function (data) {
+                console.log(data);
+                notyf.success(data["msg"]);
+                setTimeout(function () {
+                    window.location.reload();
+                }, 2000);
+            }
+        });
+    });
+
+</script>
+{% block js %}
+{% endblock %}
 </body>
 </html>
