--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -180,7 +180,7 @@
                                     <ul class="dropdown_links">
                                         {% if request.user.is_authenticated %}
                                             <li><a href="#">{% trans '资料' %}</a></li>
-                                            <li><a href="#">{% trans '购物车' %}</a></li>
+                                            <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
                                             <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a></li>
                                             <li><a href="{% url 'client:logout' %}">{% trans '登出' %}</a></li>
                                         {% else %}
@@ -219,61 +219,70 @@
                             </div>
                             <div class="cart_link">
                                 {# todo: 添加并修改购物车功能 #}
-                                <a href="#"><i class="ion-android-cart"></i><span
-                                        class="cart_text_quantity"> $138.00</span> <i class="fa fa-angle-down"></i></a>
-                                <span class="cart_quantity">2</span>
+                                {% if cart_count > 0 %}
+                                    <a href="#"><i class="ion-android-cart"></i><span
+                                            class="cart_text_quantity"> £{{ cart_subtotal }}</span> <i
+                                            class="fa fa-angle-down"></i></a>
+                                    <span class="cart_quantity">{{ cart_count }}</span>
+                                {% else %}
+                                    <a href="#"><i class="ion-android-cart"></i> <i
+                                            class="fa fa-angle-down"></i></a>
+                                {% endif %}
                                 <!--mini cart-->
                                 <div class="mini_cart">
                                     <div class="cart_close">
                                         <div class="cart_text">
-                                            <h3>cart</h3>
+                                            <h3>{% trans "购物车" %}</h3>
                                         </div>
                                         <div class="mini_cart_close">
                                             <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
                                         </div>
                                     </div>
-                                    <div class="cart_item">
-                                        <div class="cart_img">
-                                            <a href="#"><img src="assets/img/s-product/product.jpg" alt=""></a>
-                                        </div>
-                                        <div class="cart_info">
-                                            <a href="#">Letraset animal</a>
+                                    {% for item in cart %}
+                                        <div class="cart_item">
+                                            <div class="cart_img">
+                                                <a href="#"><img
+                                                        src="{{ item.image.url }}" alt="{{ item.image.alt }}"></a>
+                                            </div>
+                                            <div class="cart_info">
+                                                <a href="#">{{ item.name }}</a>
 
-                                            <span class="quantity">Qty: 1</span>
-                                            <span class="price_cart">$60.00</span>
+                                                <span class="quantity">Qty: {{ item.quantity }}</span>
+                                                <span class="price_cart">${{ item.total }}</span>
 
+                                            </div>
+                                            <div class="cart_remove">
+                                                <a class="remove_cart" data-variant="{{ item.variant.id }}"><i
+                                                        class="ion-android-close"></i></a>
+                                            </div>
                                         </div>
-                                        <div class="cart_remove">
-                                            <a href="#"><i class="ion-android-close"></i></a>
+                                    {% endfor %}
+                                    {% if cart_count > 0 %}
+                                        <div class="cart_total">
+                                            <span>{% trans "总价" %}:</span>
+                                            <span>{{ cart_subtotal }}</span>
                                         </div>
-                                    </div>
-                                    <div class="cart_item">
-                                        <div class="cart_img">
-                                            <a href="#"><img src="assets/img/s-product/product2.jpg" alt=""></a>
-                                        </div>
-                                        <div class="cart_info">
-                                            <a href="#">Natural passages</a>
-                                            <span class="quantity">Qty: 1</span>
-                                            <span class="price_cart">$69.00</span>
-                                        </div>
-                                        <div class="cart_remove">
-                                            <a href="#"><i class="ion-android-close"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="cart_total">
-                                        <span>Subtotal:</span>
-                                        <span>138.00</span>
-                                    </div>
+                                    {% endif %}
                                     <div class="mini_cart_footer">
-                                        <div class="cart_button view_cart">
-                                            <a href="cart.html">View cart</a>
-                                        </div>
-                                        <div class="cart_button checkout">
-                                            <a class="active" href="checkout.html">Checkout</a>
-                                        </div>
+                                        {% if request.user.is_authenticated %}
 
+                                            <div class="cart_button view_cart">
+                                                <a href="{% url 'client:cart' %}">{% trans "查看购物车" %}</a>
+                                            </div>
+                                            {% if cart_count > 0 %}
+                                                <div class="cart_button checkout">
+                                                    <a class="active" href="checkout.html">Checkout</a>
+                                                </div>
+                                            {% endif %}
+                                        {% else %}
+                                            <div class="cart_button view_cart">
+                                                <a href="{% url 'client:login' %}">{% trans "登录" %}</a>
+                                            </div>
+                                        {% endif %}
                                     </div>
-
+                                    <div class="product_desc text-center mt-3">
+                                        <p>{% trans "如果商品未显示，请刷新页面" %}</p>
+                                    </div>
                                 </div>
                                 <!--mini cart end-->
                             </div>
@@ -523,108 +532,4 @@
         </div>
     </footer>
     <!--footer area end-->
-
-    <!-- modal area start-->
-    <div class="modal fade" id="modal_box" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <div class="modal_body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-5 col-md-5 col-sm-12">
-                                <div class="modal_tab">
-                                    <div class="tab-content product-details-large">
-                                        <div class="tab-pane fade show active" id="tab1" role="tabpanel">
-                                            <div class="modal_tab_img">
-                                                <a href="#"><img src="assets/img/product/product1.jpg" alt=""></a>
-                                            </div>
-                                        </div>
-                                        <div class="tab-pane fade" id="tab2" role="tabpanel">
-                                            <div class="modal_tab_img">
-                                                <a href="#"><img src="assets/img/product/product2.jpg" alt=""></a>
-                                            </div>
-                                        </div>
-                                        <div class="tab-pane fade" id="tab3" role="tabpanel">
-                                            <div class="modal_tab_img">
-                                                <a href="#"><img src="assets/img/product/product3.jpg" alt=""></a>
-                                            </div>
-                                        </div>
-                                        <div class="tab-pane fade" id="tab4" role="tabpanel">
-                                            <div class="modal_tab_img">
-                                                <a href="#"><img src="assets/img/product/product5.jpg" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal_tab_button">
-                                        <ul class="nav product_navactive owl-carousel" role="tablist">
-                                            <li>
-                                                <a class="nav-link active" data-bs-toggle="tab" href="#tab1" role="tab"
-                                                   aria-controls="tab1" aria-selected="false"><img
-                                                        src="assets/img/product/product1.jpg" alt=""></a>
-                                            </li>
-                                            <li>
-                                                <a class="nav-link" data-bs-toggle="tab" href="#tab2" role="tab"
-                                                   aria-controls="tab2" aria-selected="false"><img
-                                                        src="assets/img/product/product2.jpg" alt=""></a>
-                                            </li>
-                                            <li>
-                                                <a class="nav-link button_three" data-bs-toggle="tab" href="#tab3"
-                                                   role="tab" aria-controls="tab3" aria-selected="false"><img
-                                                        src="assets/img/product/product3.jpg" alt=""></a>
-                                            </li>
-                                            <li>
-                                                <a class="nav-link" data-bs-toggle="tab" href="#tab4" role="tab"
-                                                   aria-controls="tab4" aria-selected="false"><img
-                                                        src="assets/img/product/product5.jpg" alt=""></a>
-                                            </li>
-
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-7 col-md-7 col-sm-12">
-                                <div class="modal_right">
-                                    <div class="modal_title mb-10">
-                                        <h2>Donec eu furniture</h2>
-                                    </div>
-                                    <div class="modal_price mb-10">
-                                        <span class="new_price">$64.99</span>
-                                        <span class="old_price">$78.99</span>
-                                    </div>
-                                    <div class="see_all">
-                                        <a href="product-details.html">See all features</a>
-                                    </div>
-                                    <div class="modal_add_to_cart mb-15">
-                                        <form action="#">
-                                            <input min="0" max="100" step="2" value="1" type="number">
-                                            <button type="submit">add to cart</button>
-                                        </form>
-                                    </div>
-                                    <div class="modal_description mb-15">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                            veniam,</p>
-                                    </div>
-                                    <div class="modal_social">
-                                        <h2>Share this product</h2>
-                                        <ul>
-                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- modal area start-->
 {% endblock %}
