--- a/templates/client/shop.html
+++ b/templates/client/shop.html
@@ -130,7 +130,7 @@
                                                                title="{% trans '添加到心愿单' %}"
                                                                data-bs-toggle="tooltip"><span
                                                                 class="icon icon-Heart"></span></a></li>
-                                                        <li><a data-placement="top" href="cart.html"
+                                                        <li><a data-placement="top" class="add_cart"
                                                                data-variant="{{ product.variant.id }}"
                                                                data-bs-toggle="tooltip"
                                                                title="{% trans "添加到购物车" %}">
@@ -214,7 +214,7 @@
                                                            title="{% trans '添加到心愿单' %}"
                                                            data-bs-toggle="tooltip"><span
                                                             class="icon icon-Heart"></span></a></li>
-                                                    <li><a data-placement="top" href="cart.html"
+                                                    <li><a data-placement="top" class="add_cart"
                                                            data-variant="{{ product.variant.id }}"
                                                            data-bs-toggle="tooltip"
                                                            title="{% trans "添加到购物车" %}">
@@ -334,9 +334,9 @@
                                             <a href="{% url 'client:product' product_id=product.id %}">{% trans "更多详情" %}</a>
                                         </div>
                                         <div class="modal_add_to_cart mb-15">
-                                            <form action="#">
-                                                <input min="0" max="100" step="2" value="1"
-                                                       type="number">
+                                            <form action="#" class="add_cart_form">
+                                                <input min="0" max="100" step="2" value="1" name="quantity"
+                                                       type="number" data-variant="{{ product.variant.id }}">
                                                 <button type="submit"
                                                         data-variant="{{ product.variant.id }}">{% trans "添加到购物车" %}</button>
                                             </form>
