Update:   - Add select2

--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="{% static 'client/css/style.css' %}">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 
     <!--modernizr min js here-->
     <script src="{% static 'client/js/vendor/modernizr-3.7.1.min.js' %}"></script>
@@ -39,6 +42,7 @@
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="{% static 'client/js/plugins.js' %}"></script>
 <script src="{% static 'client/js/owl.carousel.main.js' %}"></script>
 <script src="{% static 'client/js/jquery.nice.select.js' %}"></script>
