Update:   - Remove unnecessary DOM

--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -80,14 +80,16 @@
 
                 </div>
             </div>
+            {% comment %}
+            todo: 添加通知
             <div class="row">
                 <div class="col-12">
                     <div class="messages_info">
-                        <p>Purchase our new Bootstrap 5 Template – Monsta <a href="#">goo.gl/7sfFxzpic.twitter.com/w4iVfi4guR</a>
+                        <p>
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>{% endcomment %}
         </div>
     </section>
     <!--banner area end-->
@@ -2902,31 +2904,4 @@
         </div>
     </section>
     <!--blog section area end-->
-
-    <!--Newsletter area start-->
-    <div class="newsletter_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="newsletter_content">
-                        <h2>Our Newsletter</h2>
-                        <p>Get E-mail updates about our latest shop and special offers.</p>
-                        <div class="subscribe_form">
-                            <form id="mc-form" class="mc-form footer-newsletter">
-                                <input id="mc-email" type="email" autocomplete="off" placeholder="Email address..."/>
-                                <button id="mc-submit">Subscribe</button>
-                            </form>
-                            <!-- mailchimp-alerts Start -->
-                            <div class="mailchimp-alerts text-centre">
-                                <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                                <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                                <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                            </div><!-- mailchimp-alerts end -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--Newsletter area start-->
 {% endblock %}
