--- a/templates/client/login.html
+++ b/templates/client/login.html
@@ -59,11 +59,11 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            {% if form.errors %}
+                            {% comment %}{% if form.errors %}
                                 <div>
-                                    <p class="form-text" style="color: red;">{{ form.errors.0 }}</p>
+                                    {{ form.errors }}
                                 </div>
-                            {% endif %}
+                            {% endif %}{% endcomment %}
                             <div class="login_submit">
                                 {# todo: 添加密码重置功能 #}
                                 <a href="#" style="margin-right: .5rem">{% trans "忘记密码？" %}</a><a
