--- a/templates/client/register.html
+++ b/templates/client/register.html
@@ -124,11 +124,9 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            {% if form.errors %}
-                                <div>
-                                    <p class="form-text" style="color: red;">{{ form.errors.0 }}</p>
-                                </div>
-                            {% endif %}
+                            {% comment %}<div>
+                                <p class="form-text" style="color: red;">{{ form.errors }}</p>
+                            </div>{% endcomment %}
                             <div class="login_submit">
                                 <a href="#">{% trans "前往登录" %}</a>
                                 <button type="submit">{% trans "注册" %}</button>
