--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -13,6 +13,7 @@
     ========================= -->
 
     <!-- Plugins CSS -->
+    {# <script src="https://kit.fontawesome.com/286f5a36ee.js" crossorigin="anonymous"></script>#}
     <link rel="stylesheet" href="{% static 'client/css/plugins.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -27,7 +28,6 @@
 
     <!--modernizr min js here-->
     <script src="{% static 'client/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-    <script src="https://kit.fontawesome.com/286f5a36ee.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
