Update:   - Hide errors display

--- a/templates/client/register.html
+++ b/templates/client/register.html
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                             {% comment %}<div>
-                                <p class="form-text" style="color: red;">{{ form.errors }}</p>
+                                <p class="form-text" style="color: red;">{{ form.non_field_errors }}</p>
                             </div>{% endcomment %}
                             <div class="login_submit">
                                 <a href="#">{% trans "前往登录" %}</a>
