--- a/templates/client/profile.html
+++ b/templates/client/profile.html
@@ -64,6 +64,11 @@
                                                     {{ currency_symbol }}{{ order.total }}</td>
                                                 <td><a href="cart.html" class="view">view</a></td>
                                             </tr>
+                                        {% empty %}
+                                            <tr>
+                                                <td colspan="5"
+                                                    class="text-center">{% trans "暂无订单，快去选购吧！" %}</td>
+                                            </tr>
                                         {% endfor %}
                                         </tbody>
                                     </table>
